fixed spacing of latest Ep container

--- a/src/Components/LatestEpisodes/LatestEpisodes.css
+++ b/src/Components/LatestEpisodes/LatestEpisodes.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     margin: auto;
-    margin-top: 200px;
+    margin-top: 100px;
     max-width: 1140px;
 }
 
